Update file structure. Use live sass compiler extension and live server

--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- the css file that will be compiled -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sass Project</title>
+    <title>TheSociety</title>
   </head>
   <body class="light">
-    <div class="main">
+    <!-- Header & Navigation -->
+    <header>
+      <div class="header__left">
+        <div class="company__title">TheSociety</div>
+        <nav>
+          <ul>
+            <li>about us</li>
+            <li>our products</li>
+            <li>new items</li>
+            <li>contacts</li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="header__right">
+        <form action="">Search</form>
+        <div class="heart">heart icon</div>
+        <div class="cart">cart icon</div>
+      </div>
+    </header>
+    <!-- End Header & Navigation -->
+
+    <!-- Main -->
+    <main class="main">
       <p class="main__paragraph1">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex mollitia
         consequuntur dicta qui ullam reprehenderit molestias aliquid a, aperiam
@@ -21,6 +44,6 @@
         tempore dolore commodi minima repudiandae vitae quo voluptate
         consectetur laudantium laboriosam.
       </p>
-    </div>
+    </main>
   </body>
 </html>
