Update file structure by adding globals and util

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- the css file that will be compiled -->
-    <link rel="stylesheet" href="css/style.css" />
+
     <title>TheSociety</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="dist/style.css" />
+    <script src="/app/js/script.js"></script>
   </head>
   <body class="light">
     <!-- Header & Navigation -->
@@ -31,19 +38,21 @@
     <!-- End Header & Navigation -->
 
     <!-- Main -->
-    <main class="main">
-      <p class="main__paragraph1">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex mollitia
-        consequuntur dicta qui ullam reprehenderit molestias aliquid a, aperiam
-        tempore dolore commodi minima repudiandae vitae quo voluptate
-        consectetur laudantium laboriosam.
-      </p>
-      <p class="main__paragraph2">
+    <main>
+      <h1>TheSociety</h1>
+      <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex mollitia
         consequuntur dicta qui ullam reprehenderit molestias aliquid a, aperiam
         tempore dolore commodi minima repudiandae vitae quo voluptate
         consectetur laudantium laboriosam.
       </p>
     </main>
+    <aside><h2>More Info</h2></aside>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
+      perferendis, at et aliquam possimus quasi dicta, libero impedit eligendi
+      quas, assumenda incidunt. Nesciunt mollitia delectus vel laborum
+      repellendus dolorem necessitatibus.
+    </p>
   </body>
 </html>
