Use extend to add different colors to the widgets

--- a/index.html
+++ b/index.html
@@ -28,13 +28,27 @@
       </main>
       <!-- Nested `aside` block -->
       <aside class="grid__sidebar">
-        <h2>More Info</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
-          perferendis, at et aliquam possimus quasi dicta, libero impedit
-          eligendi quas, assumenda incidunt. Nesciunt mollitia delectus vel
-          laborum repellendus dolorem necessitatibus.
-        </p>
+        <div class="grid__widget--green">
+          <h2>More Info</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
+            perferendis, at et aliquam possimus quasi dicta, libero impedit
+            eligendi quas, assumenda incidunt. Nesciunt mollitia delectus vel
+            laborum repellendus dolorem necessitatibus.
+          </p>
+        </div>
+        <div class="grid__widget--magenta">
+          <h2>Check out this!</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
+            perferendis, at et aliquam possimus quasi dicta, libero impedit
+            eligendi quas, assumenda incidunt.
+          </p>
+        </div>
+        <div class="grid__widget--magenta">
+          <h2>More cool stuff is on the way!</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </div>
       </aside>
     </div>
   </body>
