--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </main>
       <!-- Nested `aside` block -->
       <aside class="grid__sidebar">
-        <div class="grid__widget--green">
+        <div class="grid__widget green">
           <h2>More Info</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
@@ -37,7 +37,7 @@
             laborum repellendus dolorem necessitatibus.
           </p>
         </div>
-        <div class="grid__widget--magenta">
+        <div class="grid__widget magenta">
           <h2>Check out this!</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
@@ -45,7 +45,7 @@
             eligendi quas, assumenda incidunt.
           </p>
         </div>
-        <div class="grid__widget--magenta">
+        <div class="grid__widget magenta">
           <h2>More cool stuff is on the way!</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
         </div>
