Remove unused classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="dist/style.css" />
     <script src="/app/js/script.js"></script>
   </head>
-  <body class="light">
+  <body>
     <!-- `header` block -->
     <div class="grid">
       <!-- Nested `main` block -->
