Change title to Boilerplate - Sass

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TheSociety</title>
+    <title>Boilerplate - Sass</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +18,7 @@
     <div class="grid">
       <!-- Nested `main` block -->
       <main class="grid__main">
-        <h1>TheSociety</h1>
+        <h1>Boilerplate - Sass</h1>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex mollitia
           consequuntur dicta qui ullam reprehenderit molestias aliquid a,
