--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </p>
         </div>
         <div class="grid__widget candyPink">
-          <h2>Check out this!</h2>
+          <h2>Check this out!</h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa
             perferendis, at et aliquam possimus quasi dicta, libero impedit
